--- a/MedicalWebSite/web/authorization.html
+++ b/MedicalWebSite/web/authorization.html
@@ -12,7 +12,7 @@
 <h2 style="text-align: center;"><span style="color: #00ccff;">Регистрация</span></h2>
 <div style="font-family:Comfortaa;font-size: 120%; margin: 20px 0px 0px 30px"><br/>
     <div style="text-align: center">
-        <form>
+        <form action="authorization" method="post">
             Логин(почта): <input type="email" name="email"required/><br/><br/>
             Пароль: <input type="password" name="pwd"required><br/><br/>
             <div class="formname">
