--- a/MedicalWebSite/web/mainPage.html
+++ b/MedicalWebSite/web/mainPage.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main page</title>
+    <title>Medical.Care.MainPage</title>
 </head>
 <body>
-<h1>Main page</h1>
+<style>body{
+    background: url("photo/background.png"); background-size: 100% 220%;
+}</style>
+<p style="text-align: center;"><img width = "450" height = "70" src="photo/siteName.PNG" , alt = "wait"></p>
+<h4 style="text-align: right;">Личный кабинет:</h4>
+<p style="text-align: right;"><strong><span style="text-decoration: underline;"><a href="">Зарегестрироваться</a></span></strong> / <strong><a href="">Вход</a></strong></p><br/>
+<h3 style="text-align: center;">Здравствуйте, если вы живете в Казани и ищете хорошую клинику,&nbsp;</h3>
+<h3 style="text-align: center;">то этот сайт поможет вам в этом.</h3>
+<h3 style="text-align: center;">На этом сайте вы сможете найти оценки и отзывы услуг разных клиник от&nbsp;</h3>
+<h3 style="text-align: center;">реальных людей.</h3>
+<h3 style="text-align: center;">Для вашего удобства&nbsp;</h3>
+<h3 style="text-align: center;">на сайте отобраны лучшие клиники вышего города, с перечнем</h3>
+<h3 style="text-align: center;">предоставляемых ими услуг.</h3>
+<h3 style="text-align: center;"><a href="">Список клиник</a></h3>
+<h3 style="text-align: center;">Если у Вас остались вопросы, которые Вы хотите обсудить,</h3>
+<h3 style="text-align: center;">приглашаем посетить наш <a href="">Форум.</a></h3>
+</div>
+<p style="text-align: center;"><img width = "850" height = "280" src="photo/slide-medical-staff-2.jpg" , alt = "wait"></p>
 </body>
 </html>
