--- a/MedicalWebSite/web/authorization.html
+++ b/MedicalWebSite/web/authorization.html
@@ -16,10 +16,11 @@
             Логин(почта): <input type="email" name="email"required/><br/><br/>
             Пароль: <input type="password" name="pwd"required><br/><br/>
             <div class="formname">
-                <input type="submit" name="submit" id="submit" value="Войти" />
+                <a href="style.css" class="button7">
+                    <input type="submit" name="submit" id="submit" value="Войти" /></a>
             </div>
         </form>
     </div>
-
+</div>
 </body>
 </html>
