--- a/MedicalWebSite/web/personalArea.html
+++ b/MedicalWebSite/web/personalArea.html
@@ -16,6 +16,7 @@
     Пол:
     <input type="radio" name="sex" value="male"/>Мужской
     <input type="radio" name="sex" value="female"/>Женский<br/><br/>
+    <label for="date">Дата рождения: </label><input type="date" id="date" name="date"/></br></br>
     Номер телефона: <input type="number" name="number"/><br/><br/>
     Город: <input type="text" name="town"><br/><br/>
     О себе: <input type="text" class="text" name="aboutyourself">
