--- a/MedicalWebSite/web/mainPage.html
+++ b/MedicalWebSite/web/mainPage.html
@@ -3,19 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Medical.Care.MainPage</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap..">
+
 </head>
 <body>
+<style>
+    a.button7 {
+        font-weight: 700;
+        color: white;
+        text-decoration: none;
+        padding: .8em 1em calc(.8em + 3px);
+        border-radius: 3px;
+        background: rgb(64,199,129);
+        box-shadow: 0 -3px rgb(53,167,110) inset;
+        transition: 0.2s;
+    }
+    a.button7:hover { background: rgb(53, 167, 110); }
+    a.button7:active {
+        background: rgb(33,147,90);
+        box-shadow: 0 3px rgb(33,147,90) inset;
+    }
+</style>
 <style>body{
     background: url("photo/background.png"); background-size: 100% 220%;
 }</style>
 <p style="text-align: center;"><img width = "450" height = "70" src="photo/siteName.PNG" , alt = "wait"></p>
 <h4 style="text-align: right;">Личный кабинет:</h4>
-<p style="text-align: right;"><strong><span style="text-decoration: underline;"><a href="">Зарегестрироваться</a></span></strong> / <strong><a href="">Вход</a></strong></p><br/>
+<p style="text-align: right;"><strong><a href="" class="button7">Зарегестрироваться</style></a></strong> / <strong><a href="" class="button7">Вход</a></strong></p><br/>
 <h3 style="text-align: center;">Здравствуйте, если вы живете в Казани и ищете хорошую клинику,&nbsp;</h3>
 <h3 style="text-align: center;">то этот сайт поможет вам в этом.</h3>
 <h3 style="text-align: center;">На этом сайте вы сможете найти оценки и отзывы услуг разных клиник от&nbsp;</h3>
 <h3 style="text-align: center;">реальных людей.</h3>
-<h3 style="text-align: center;">Для вашего удобства&nbsp;</h3>
+<h3 style="text-align: center;">Для вашего удобства</h3>
 <h3 style="text-align: center;">на сайте отобраны лучшие клиники вышего города, с перечнем</h3>
 <h3 style="text-align: center;">предоставляемых ими услуг.</h3>
 <h3 style="text-align: center;"><a href="">Список клиник</a></h3>
