--- a/MedicalWebSite/web/Forum.html
+++ b/MedicalWebSite/web/Forum.html
@@ -6,15 +6,39 @@
 </head>
 <body>
 <br>
+<style>
+    a.button7 {
+        font-weight: 700;
+        color: white;
+        text-decoration: none;
+        padding: .8em 1em calc(.8em + 3px);
+        border-radius: 3px;
+        background: rgb(64,199,129);
+        box-shadow: 0 -3px rgb(53,167,110) inset;
+        transition: 0.2s;
+    }
+    a.button7:hover { background: rgb(53, 167, 110); }
+    a.button7:active {
+        background: rgb(33,147,90);
+        box-shadow: 0 3px rgb(33,147,90) inset;
+    }
+</style>
 <style>body{
     background: url("photo/background.png"); background-size: 100% 220%;
 }</style>
+<style>
+    .outline {
+        border: 2px solid black;
+        padding: 0 10px;
+    }
+</style>
 <p style="text-align: center;"><img width = "450" height = "70" src="photo/siteName.PNG" , alt = "wait"></p>
 <h4 style="text-align: right;">Личный кабинет:</h4>
 <p style="text-align: right;"><strong><a href="" class="button7">Зарегестрироваться</style></a></strong> / <strong><a href="" class="button7">Вход</a></strong></p><br/>
-<h3 style="text-align: center;">Форум</h3>
-<p>Что вы думаете?</p>
-<div style="border: 2px solid black; text-align: left; background-color: white; width: 500px; height: 100px; padding: 10px;">
+<h2 style="text-align: center;"><span style="color: #00ccff;">ФОРУМ</span></h2>
+
+<h3>Что вы думаете?</h3>
+<div class="outline" style="width: 800px">
     <table>
         <tr>
             <td style="width: 200px">
