--- a/MedicalWebSite/web/authorization.html
+++ b/MedicalWebSite/web/authorization.html
@@ -1,26 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Med.Care.Autorization</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Med.Care</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 </head>
 <body>
-<style>body{
-    background: url("photo/background.png"); background-size: 150% 425%;
-}</style>
 <p style="text-align: center;"><img width = "450" height = "70" src="photo/siteName.PNG" , alt = "wait"></p>
-<h2 style="text-align: center;"><span style="color: #00ccff;">Регистрация</span></h2>
-<div style="font-family:Comfortaa;font-size: 120%; margin: 20px 0px 0px 30px"><br/>
-    <div style="text-align: center">
-        <form action="authorization" method="post">
-            Логин(почта): <input type="email" name="email"required/><br/><br/>
-            Пароль: <input type="password" name="pwd"required><br/><br/>
-            <div class="formname">
-                <a href="style.css" class="button7">
-                    <input type="submit" name="submit" id="submit" value="Войти" /></a>
-            </div>
-        </form>
+
+<div id="wrapper">
+    <div class="user-icon"></div>
+    <div class="pass-icon"></div>
+	
+<form name="login-form" class="login-form" action="" method="post">
+
+    <div class="header">
+		<h1>Авторизация</h1>
     </div>
+
+    <div class="content">
+		<input name="username" type="text" class="input username" value="Логин" onfocus="this.value=''" />
+		<input name="password" type="password" class="input password" value="Пароль" onfocus="this.value=''" />
+    </div>
+
+    <div class="footer">
+		<input type="submit" name="submit" value="ВОЙТИ" class="button" />
+		<input type="submit" name="submit" value="Регистрация" class="register" />
+    </div>
+
+</form>
 </div>
+<div class="gradient"></div>
+
+<script type="text/javascript">
+$(document).ready(function() {
+	$(".username").focus(function() {
+		$(".user-icon").css("left","-48px");
+	});
+	$(".username").blur(function() {
+		$(".user-icon").css("left","0px");
+	});
+	
+	$(".password").focus(function() {
+		$(".pass-icon").css("left","-48px");
+	});
+	$(".password").blur(function() {
+		$(".pass-icon").css("left","0px");
+	});
+});
+</script>
 </body>
 </html>
