--- a/MedicalWebSite/web/listOfClinics.html
+++ b/MedicalWebSite/web/listOfClinics.html
@@ -5,12 +5,29 @@
     <title>Title</title>
 </head>
 <br>
+<style>
+    a.button7 {
+        font-weight: 700;
+        color: white;
+        text-decoration: none;
+        padding: .8em 1em calc(.8em + 3px);
+        border-radius: 3px;
+        background: rgb(64,199,129);
+        box-shadow: 0 -3px rgb(53,167,110) inset;
+        transition: 0.2s;
+    }
+    a.button7:hover { background: rgb(53, 167, 110); }
+    a.button7:active {
+        background: rgb(33,147,90);
+        box-shadow: 0 3px rgb(33,147,90) inset;
+    }
+</style>
 <style>body{
     background: url("photo/background.png"); background-size: 100% 220%;
 }</style>
 <p style="text-align: center;"><img width = "450" height = "70" src="photo/siteName.PNG" , alt = "wait"></p>
 <h4 style="text-align: right;">Личный кабинет:</h4>
-<p style="text-align: right;"><strong><a href="" class="button7">Зарегестрироваться</style></a></strong> / <strong><a href="" class="button7">Вход</a></strong></p><br/>
+<p style="text-align: right;"><strong><a href="style.css" class="button7">Зарегестрироваться</style></a></strong> / <strong><a href="" class="button7">Вход</a></strong></p><br/>
 
 <form style="text-align: center">
     <input type="search">
