--- a/MedicalWebSite/web/registration.html
+++ b/MedicalWebSite/web/registration.html
@@ -11,32 +11,32 @@
 <style>body{
     background: url("photo/background.png"); background-size: 100% 220%;
 }</style>
+
 <p style="text-align: center;"><img width = "450" height = "70" src="photo/siteName.PNG" , alt = "wait"></p>
-<h2 style="text-align: center;"><span style="color: #00ccff;">Регистрация</span></h2>
+<h2 style="text-align: center;"><span style="color: #00ccff;">РЕГИСТРАЦИЯ</span></h2>
 <div style="font-family:Comfortaa;font-size: 120%; margin: 20px 0px 0px 30px"><br/>
     <form action="registration" method="post">
-    Имя: <input type="text" name="firstname" required/><br/><br/>
-    Фамилия: <input type="text" name="lastname" required/><br/><br/>
+        Имя: <input type="text" name="firstname" required/><br/><br/>
+        Фамилия: <input type="text" name="lastname" required/><br/><br/>
         <style>
-        .block_for_input {
-        width: 200px;
-        }
-        .block_for_input input {
-        width: 100%;
-        }
-        #block_check {
-        height: 5px;
-        margin-top: 5px;
-        transition: 1s;
-        }
-
+            .block_for_input {
+                width: 200px;
+            }
+            .block_for_input input {
+                width: 100%;
+            }
+            #block_check {
+                height: 5px;
+                margin-top: 5px;
+                transition: 1s;
+            }
         </style>
-    Пол:
+        Пол:
         <input type="radio" name="sex" value="male"/>Мужской
         <input type="radio" name="sex" value="female"/>Женский<br/><br/>
         Логин(почта): <input type="email" name="email"required/><br/><br/>
         <div class="block_for_input">
-        Пароль: <input type="password" id="input_test" name="pass" required onkeyup='passcorr()'/>
+            Пароль: <input type="password" id="input_test" name="pass" required onkeyup='passcorr()'/>
             <script>
                 function passcorr() {
                     var pass = document.getElementById("input_test").value;
@@ -51,11 +51,9 @@
                         err = "<p color=\'red\'> Введены недопустимые символы! Разрешены только латинские буквы и цифры!</p>";
                         document.getElementById("err").innerHTML=err;
                         exit; // прерываем так как есть ошибка
-
                     }
-
                     if (pass.length>=6&&pass.length<=20){
-                    // button.disabled = false;
+                        // button.disabled = false;
                         err = "<p color=\'green\'>Успешно!</p>";
                     } else {
                         // button.disabled = true;
@@ -66,84 +64,79 @@
                     document.getElementById("err").innerHTML=err;
                 }
             </script>
-        <div id="block_check"></div>
+            <div id="block_check"></div>
         </div>
         Повторите пароль: <input type = "password" id="2pass" name="2pass"required></br></br>
-    <!--<input type="checkbox" name="consent" value="consent"/>Я согласен на обработку персональных данных<br/><br/>-->
-     <!--<input type="submit" value="Зарегестрироваться"/>-->
+        <!--<input type="checkbox" name="consent" value="consent"/>Я согласен на обработку персональных данных<br/><br/>-->
+        <!--<input type="submit" value="Зарегестрироваться"/>-->
         <div class="formname">
             <input id="checkbox" type="checkbox" name="checkbox" onchange="document.getElementById('submit').disabled = !this.checked;" />
             <label for="checkbox">Настоящим подтверждаю, что я согласен на обработку персональных данных</label><br/>
             <input type="submit" disabled="disabled" name="submit" id="submit"  value="Зарегестрироваться" />
         </div>
         <script>
-        var s_letters = "qwertyuiopasdfghjklzxcvbnm"; // Буквы в нижнем регистре
-        var b_letters = "QWERTYUIOPLKJHGFDSAZXCVBNM"; // Буквы в верхнем регистре
-        var digits = "0123456789"; // Цифры
-        var specials = "!@#$%^&*()_-+=\|/.,:;[]{}"; // Спецсимволы
-
-        var input_test = document.getElementById('input_test');//получаем поле
-        var block_check = document.getElementById('block_check');//получаем блок с индикатором
-
-        input_test.addEventListener('keyup', function(evt){
-        var input_test_val = input_test.value;//получаем значение из поля
-
-        var is_s = false; // Есть ли в пароле буквы в нижнем регистре
-        var is_b = false; // Есть ли в пароле буквы в верхнем регистре
-        var is_d = false; // Есть ли в пароле цифры
-        var is_sp = false; // Есть ли в пароле спецсимволы
-
-        for (var i = 0; i < input_test_val.length; i++) {
-        /* Проверяем каждый символ пароля на принадлежность к тому или иному типу */
-        if (!is_s && s_letters.indexOf(input_test_val[i]) != -1) {
-        is_s = true
-        }
-        else if (!is_b && b_letters.indexOf(input_test_val[i]) != -1) {
-        is_b = true
-        }
-        else if (!is_d && digits.indexOf(input_test_val[i]) != -1) {
-        is_d = true
-        }
-        else if (!is_sp && specials.indexOf(input_test_val[i]) != -1) {
-        is_sp = true
-        }
-        }
-
-        var rating = 0;
-        if (is_s) rating++; // Если в пароле есть символы в нижнем регистре, то увеличиваем рейтинг сложности
-        if (is_b) rating++; // Если в пароле есть символы в верхнем регистре, то увеличиваем рейтинг сложности
-        if (is_d) rating++; // Если в пароле есть цифры, то увеличиваем рейтинг сложности
-        if (is_sp) rating++; // Если в пароле есть спецсимволы, то увеличиваем рейтинг сложности
-        /* Далее идёт анализ длины пароля и полученного рейтинга, и на основании этого готовится текстовое описание сложности пароля */
-        if (input_test_val.length < 6 && rating < 3) {
-        block_check.style.width = "10%";
-        block_check.style.backgroundColor = '#e7140d';
-        }
-        else if (input_test_val.length < 6 && rating >= 3) {
-        block_check.style.width = "50%";
-        block_check.style.backgroundColor = '#ffdb00';
-        }
-        else if (input_test_val.length >= 8 && rating < 3) {
-        block_check.style.width = "50%";
-        block_check.style.backgroundColor = '#ffdb00';
-        }
-        else if (input_test_val.length >= 8 && rating >= 3) {
-        block_check.style.width = "100%";
-        block_check.style.backgroundColor = '#61ac27';
-        }
-        else if (input_test_val.length >= 6 && rating == 1) {
-        block_check.style.width = "10%";
-        block_check.style.backgroundColor = '#e7140d';
-        }
-        else if (input_test_val.length >= 6 && rating > 1 && rating < 4) {
-        block_check.style.width = "50%";
-        block_check.style.backgroundColor = '#ffdb00';
-        }
-        else if (input_test_val.length >= 6 && rating == 4) {
-        block_check.style.width = "100%";
-        block_check.style.backgroundColor = '#61ac27';
-        };
-        });
+            var s_letters = "qwertyuiopasdfghjklzxcvbnm"; // Буквы в нижнем регистре
+            var b_letters = "QWERTYUIOPLKJHGFDSAZXCVBNM"; // Буквы в верхнем регистре
+            var digits = "0123456789"; // Цифры
+            var specials = "!@#$%^&*()_-+=\|/.,:;[]{}"; // Спецсимволы
+            var input_test = document.getElementById('input_test');//получаем поле
+            var block_check = document.getElementById('block_check');//получаем блок с индикатором
+            input_test.addEventListener('keyup', function(evt){
+                var input_test_val = input_test.value;//получаем значение из поля
+                var is_s = false; // Есть ли в пароле буквы в нижнем регистре
+                var is_b = false; // Есть ли в пароле буквы в верхнем регистре
+                var is_d = false; // Есть ли в пароле цифры
+                var is_sp = false; // Есть ли в пароле спецсимволы
+                for (var i = 0; i < input_test_val.length; i++) {
+                    /* Проверяем каждый символ пароля на принадлежность к тому или иному типу */
+                    if (!is_s && s_letters.indexOf(input_test_val[i]) != -1) {
+                        is_s = true
+                    }
+                    else if (!is_b && b_letters.indexOf(input_test_val[i]) != -1) {
+                        is_b = true
+                    }
+                    else if (!is_d && digits.indexOf(input_test_val[i]) != -1) {
+                        is_d = true
+                    }
+                    else if (!is_sp && specials.indexOf(input_test_val[i]) != -1) {
+                        is_sp = true
+                    }
+                }
+                var rating = 0;
+                if (is_s) rating++; // Если в пароле есть символы в нижнем регистре, то увеличиваем рейтинг сложности
+                if (is_b) rating++; // Если в пароле есть символы в верхнем регистре, то увеличиваем рейтинг сложности
+                if (is_d) rating++; // Если в пароле есть цифры, то увеличиваем рейтинг сложности
+                if (is_sp) rating++; // Если в пароле есть спецсимволы, то увеличиваем рейтинг сложности
+                /* Далее идёт анализ длины пароля и полученного рейтинга, и на основании этого готовится текстовое описание сложности пароля */
+                if (input_test_val.length < 6 && rating < 3) {
+                    block_check.style.width = "10%";
+                    block_check.style.backgroundColor = '#e7140d';
+                }
+                else if (input_test_val.length < 6 && rating >= 3) {
+                    block_check.style.width = "50%";
+                    block_check.style.backgroundColor = '#ffdb00';
+                }
+                else if (input_test_val.length >= 8 && rating < 3) {
+                    block_check.style.width = "50%";
+                    block_check.style.backgroundColor = '#ffdb00';
+                }
+                else if (input_test_val.length >= 8 && rating >= 3) {
+                    block_check.style.width = "100%";
+                    block_check.style.backgroundColor = '#61ac27';
+                }
+                else if (input_test_val.length >= 6 && rating == 1) {
+                    block_check.style.width = "10%";
+                    block_check.style.backgroundColor = '#e7140d';
+                }
+                else if (input_test_val.length >= 6 && rating > 1 && rating < 4) {
+                    block_check.style.width = "50%";
+                    block_check.style.backgroundColor = '#ffdb00';
+                }
+                else if (input_test_val.length >= 6 && rating == 4) {
+                    block_check.style.width = "100%";
+                    block_check.style.backgroundColor = '#61ac27';
+                };
+            });
         </script>
     </form>
 </div>
