--- a/MedicalWebSite/web/1clinic.html
+++ b/MedicalWebSite/web/1clinic.html
@@ -155,6 +155,7 @@
     <div>
     <td style="width: 200px">
     <div class="date">
+        <img wight="80" height="80" src="photo/userPhoto.png">
     <h4>${15.06.2000 15:30 }</h4>
     </td>
     </div>
