--- a/MedicalWebSite/web/Forum.html
+++ b/MedicalWebSite/web/Forum.html
@@ -42,15 +42,15 @@
     <table>
         <tr>
             <td style="width: 200px">
-                <div class="user_name">
-                    <h3 style="color: blue">${Юля}</h3>
+                <div class="user_name" id="user_name">
+                    <h3 style="color: blue">${Name}</h3>
                 </div>
-                <div class="date">
-                    <h4>${15.06.2000 15:30 }</h4>
+                <div class="date" id="date">
+                    <h4>${Date}</h4>
             </td>
         <td>
-            <div class="text_comment">
-                <p>${Не поняла как регестрироваться, помогите!!!}</p>
+            <div class="text_comment" id="text_comment">
+                <p>${your_comment}</p>
                 <a href="">Ответить</a>
             </div>
         </td>
